--- a/src/index.css
+++ b/src/index.css
@@ -4,52 +4,61 @@
 
 @layer base {
   @font-face {
-    font-family: 'Poppins';
-    src: url('./assets/fonts/poppins-regular.woff2') format('woff2'),
-    url('./assets/fonts/poppins-regular.woff') format('woff');
+    font-family: "Poppins";
+    src: url("./assets/fonts/poppins-regular.woff2") format("woff2"),
+      url("./assets/fonts/poppins-regular.woff") format("woff");
     font-weight: 900;
     font-display: swap;
     font-style: normal;
   }
   @font-face {
-    font-family: 'Poppins';
-    src: url('./assets/fonts/poppins-regular.woff2') format('woff2'),
-    url('./assets/fonts/poppins-regular.woff') format('woff');
+    font-family: "Poppins";
+    src: url("./assets/fonts/poppins-regular.woff2") format("woff2"),
+      url("./assets/fonts/poppins-regular.woff") format("woff");
     font-weight: 400;
     font-display: swap;
     font-style: normal;
   }
   @font-face {
-    font-family: 'Poppins';
-    src: url('./assets/fonts/poppins-medium.woff') format('woff2'),
-    url('./assets/fonts/poppins-medium.woff') format('woff');
+    font-family: "Poppins";
+    src: url("./assets/fonts/poppins-medium.woff") format("woff2"),
+      url("./assets/fonts/poppins-medium.woff") format("woff");
     font-weight: 500;
     font-display: swap;
     font-style: normal;
   }
   @font-face {
-    font-family: 'Poppins';
-    src: url('./assets/fonts/poppins-semibold.woff2') format('woff2'),
-    url('./assets/fonts/poppins-semibold.woff') format('woff');
+    font-family: "Poppins";
+    src: url("./assets/fonts/poppins-semibold.woff2") format("woff2"),
+      url("./assets/fonts/poppins-semibold.woff") format("woff");
     font-weight: 600;
     font-display: swap;
     font-style: normal;
   }
   @font-face {
-    font-family: 'Poppins';
-    src: url('./assets/fonts/poppins-bold.woff2') format('woff2'),
-    url('./assets/fonts/poppins-bold.woff') format('woff');
+    font-family: "Poppins";
+    src: url("./assets/fonts/poppins-bold.woff2") format("woff2"),
+      url("./assets/fonts/poppins-bold.woff") format("woff");
     font-weight: 700;
     font-display: swap;
     font-style: normal;
   }
   @font-face {
-    font-family: 'DMSans';
-    src: url('./assets/fonts/dmsans-regular.woff2') format('woff2'),
-    url('./assets/fonts/dmsans-regular.woff') format('woff');
+    font-family: "DMSans";
+    src: url("./assets/fonts/dmsans-regular.woff2") format("woff2"),
+      url("./assets/fonts/dmsans-regular.woff") format("woff");
     font-weight: 400;
     font-display: swap;
     font-style: normal;
+  }
+}
+
+@layer utilities {
+  .animation-delay-200 {
+    animation-delay: 0.2s;
+  }
+  .animation-delay-400 {
+    animation-delay: 0.4s;
   }
 }
 
